# danSOT

./: CMakeLists.txt  CMakeLists_GTK4.txt  Dev_README.md  README.md  config.h  main.cpp  offsets.h
IO/: InputManager.cpp  InputManager.h
aimbot/: CannonAimbot.cpp  CannonAimbot.h  PlayerAimbot.cpp  PlayerAimbot.h
esp/: ESP.cpp  ESP.h  tables.h
hacks/: Aimbot.cpp  Aimbot.h  InputManager.cpp  KeyboardMonitor.cpp  KeyboardMonitor.h  Mouse.cpp  Mouse.h
memory/: Memory.cpp  Memory.h  ProcessUtils.cpp  ProcessUtils.h
overlay/: Overlay.cpp  Overlay.h  README.md  drawing.h  overlay_main.cpp  overlay_wayland_c_bridge.c  overlay_wayland_c_bridge.h  shared_data.h
utils/: GameData.h  GameStructs.h  LocalData.h  LocalFunctions.h  LocalStructs.h  tables.h
